# data-structures-project

./: pyproject.toml
homework-1/: main.py
src/: stack.py
tests/: conftest.py  test_stack.py
