[tool.poetry]
name = "data-structures-project"
version = "0.1.0"
description = ""
authors = ["kirillskyeng <kirill.netreba@skyeng.ru>"]
readme = "README.md"
packages = [{include = "data_structures_project"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
aiohttp = "3^.8.5"
aiosignal = "^1.3.1"
async-timeout = "^4.0.3"
attrs = "^23.1.0"
charset-normalizer = "^3.2.0"
colorama = "^0.4.6"
coverage = "^7.3.0"
frozenlist = "^1.4.0"
idna = "^3.4"
iniconfig = "^2.0.0"
multidict = "^6.0.4"
packaging = "^23.1"
pip = "^23.1.2"
pluggy = "^1.2.0"
psutil = "^5.9.5"
pycover = "^0.9.8"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
screeninfo = "^0.8.1"
setuptools = "^67.8.0"
wheel = "^0.40.0"
yarl = "^1.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
